# logsentinel

./: .gitignore  README.md  pyproject.toml
src/logsentinel/: __init__.py  _core.py
